test/instance-checks-2.err.expect
test/instance-checks-2.ktn:1:1: error: expected scalar type t2 but got t1
test/instance-checks-2.ktn:1:1: note: t1 (type of x) is from here
test/instance-checks-2.ktn:1:1: note: t2 (from example) is from here

test/instance-checks-2.ktn:1:1: error: expected stack type s2... t2 but got s1... t1
test/instance-checks-2.ktn:1:28: note: t1 (type of x) is from here

test/instance-checks-2.ktn:1:1: error: expected scalar type (s2... t2 -> s2... t3) but got (s1... t1 -> s1... t1)
test/instance-checks-2.ktn:1:26: note: (s1... t1 -> s1... t1) is from here
test/instance-checks-2.ktn:1:13: note: (s2... t2 -> s2... t3) is from here
test/instance-checks-2.ktn:1:1: note: t3 (from example) is from here
