test/instance-checks-2.ktn
def example {a, b}(a -> b): ->x; x
